--- a/app/index.html
+++ b/app/index.html
@@ -28,7 +28,7 @@
     <![endif]-->
 
   <!-- Add your site or application content here -->
-  <div class="menuUno hidden-xs shadow">
+  <div class="menuUno hidden-xs hidden-sm shadow">
     <div class="container-fluid">
       <div align="center">
           <a href="#/"> <img src="images/tec logo-01.svg" class="img-responsive imgLogo" alt=""></a>
@@ -39,22 +39,23 @@
             </div>
         </div>
       </div>
-      <div class="p40">
+      <br>
+      <div class="">
           <ul class="navList">
             <li><a href="#causa">Causa</a></li>
             <li><a href="#campus">Campus</a></li>
-            <li><a href="#reporteAnual">Descarga reporte anual</a></li>
-            <p class="text-center p20 textSub f16">Conoce mas formas de ayudar</p>
-            <li><a href="#unetePromotor">Unete como promotor</a></li>
-            <li><a href="#herramientaProcuracion">Herramientas de procuración</a></li>
+            <li><a href="#reporteAnual">Descarga reporte anual</a></li><br>
+            <p class="text-center textNav">Conoce mas formas de ayudar</p><br>
+            <li><a href="#unete">Unete como promotor</a></li>
+            <li><a href="#herraminetasProcuracion">Herramientas de procuración</a></li>
           </ul>
         </div>
-        <button class="btn btnDona center-block">DONA AHORA</button>
-        
+        <br>
+        <a href="#dona" class="btn btnDona center-block ptb20">DONA AHORA</a>
     </div>
   </div>
 
-  <div class="header visible-xs">
+  <div class="header visible-xs visible-sm">
     <div class="navbar navbar-default" role="navigation">
       <div class="container">
         <div class="navbar-header">
@@ -66,21 +67,19 @@
             <span class="icon-bar"></span>
           </button>
 
-          <a class="navbar-brand" href="#/">tecMonterrey</a>
+          <a class="" href="#/"><img src="images/tec logo-01.svg" class="img-responsive imgLogo" alt=""></a>
         </div>
 
         <div class="collapse navbar-collapse" id="js-navbar-collapse">
 
           <ul class="nav navbar-nav">
-            <li class="active">
-              <a href="#/">Home</a>
-            </li>
-            <li>
-              <a ng-href="#/about">About</a>
-            </li>
-            <li>
-              <a ng-href="#/">Contact</a>
-            </li>
+              <li><a href="#causa">Causa</a></li>
+              <li><a href="#campus">Campus</a></li>
+              <li><a href="#reporteAnual">Descarga reporte anual</a></li>
+              <p class="text-center textNav hidden-sm ptb20">Conoce mas formas de ayudar</p>
+              <li><a href="#unete">Unete como promotor</a></li>
+              <li><a href="#herraminetasProcuracion">Herramientas de procuración</a></li>
+             <li> <a href="#dona" class="btn btnDona center-block ptb20">DONA AHORA</a></li>
           </ul>
         </div>
       </div>
@@ -94,11 +93,11 @@
   <footer>
       <div class="container-fluid">
   <div class="footer1 hidden-xs">
-      <div class="text-center fAlign">
+      <div class="text-center"> <br>
           <ul class="navListFooter">
-              <li><a href="">AVISO LEGAL  |</a></li>
-              <li><a href="">POLÍTICAS DE PRIVACIDAD  |</a></li>
-              <li><a href="">AVISO DE PRIVACIDAD  |</a></li>
+              <li><a href="">AVISO LEGAL |</a></li>
+              <li><a href="">POLÍTICAS DE PRIVACIDAD |</a></li>
+              <li><a href="">AVISO DE PRIVACIDAD |</a></li>
               <li><a href="">SOBRE EL SITIO</a></li>
             </ul>
       </div>
@@ -156,6 +155,14 @@
   <script src="scripts/app.js"></script>
   <script src="scripts/controllers/main.js"></script>
   <script src="scripts/controllers/about.js"></script>
+  <script src="scripts/controllers/causa.js"></script>
+  <script src="scripts/controllers/campus.js"></script>
+  <script src="scripts/controllers/reporteanual.js"></script>
+  <script src="scripts/controllers/unete.js"></script>
+  <script src="scripts/controllers/herraminetasprocuracion.js"></script>
+  <script src="scripts/controllers/dona.js"></script>
+  <script src="scripts/controllers/vercausa.js"></script>
+  <script src="scripts/controllers/vercampus.js"></script>
   <!-- endbuild -->
 </body>
 
