--- a/app/index.html
+++ b/app/index.html
@@ -18,8 +18,11 @@
   <!-- endbuild -->
   <!-- build:css(.tmp) styles/main.css -->
   <link rel="stylesheet" href="styles/main.css">
+  <link rel="stylesheet" href="styles/animate.css">
   <!-- endbuild -->
-  <link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
+  <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
+  <script src="https://use.fontawesome.com/09bf054b47.js"></script>
+  <script src="scripts/wow.min.js"></script>
 </head>
 
 <body ng-app="tecMonterreyApp">
